opam-version: "1.2"
name: "example_grammars"
version: "0.0.1"

# ----------------------------------------------------------------------

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"

# ----------------------------------------------------------------------

depends: [
  "ppx_blob"
  "p0_lib"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]
